--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "electron .",
     "dist": "electron-builder",
-    "package": "electron-packager . copilotoUDH --platform=win32 --arch=x64 --overwrite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "build": {
@@ -22,7 +21,10 @@
       "icon": "icon.ico"
     },
     "linux": {
-      "target": ["AppImage", "deb"],
+      "target": [
+        "AppImage",
+        "deb"
+      ],
       "icon": "icon.png"
     },
     "mac": {
@@ -36,8 +38,7 @@
   "description": "",
   "devDependencies": {
     "electron": "^36.4.0",
-    "electron-builder": "^26.0.12",
-    "electron-packager": "^17.1.2"
+    "electron-builder": "^26.0.12"
   },
   "eslintConfig": {
     "extends": "standard"
