--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "App de titulación UDH",
   "devDependencies": {
     "electron": "^36.4.0",
     "electron-builder": "^26.0.12"
